5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1828_1644.log
== TEST (2019-06-12 14:07:33) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

rp = 0
for i in range(size(n)):
	if(i >= 5):
	rp = rp + 1
print(rp)
	


	

-- ERROR:
File "XXXX", line 9
    rp = rp + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:07:46) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

rp = 0
for i in range(size(n)):
	if(i >= 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:09:06) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

for i in range(size(n)):
	if(i >= 5):
	vn = vn + 1
print(vn)
	


	

-- ERROR:
File "XXXX", line 8
    vn = vn + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:09:11) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

for i in range(size(n)):
	if(i >= 5):
		vn = vn + 1
print(vn)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:09:43) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
rp = 0
for i in range(size(n)):
	if(i >= 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:10:03) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
rp = 0
for i in range(size(n)):
	if(i <= 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:10:32) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
rp = 0
for i in range(n):
	if(i <= 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:10) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

for i in range(size(n)):
	if(i >= 5):
		vn = vn + 1
print(vn)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:53) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i <= 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:48) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i < 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:59) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i > 5):
		rp = rp + 1
print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:28) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i > 5):
	rp = rp + 1
	print(rp)
	


	

-- ERROR:
File "XXXX", line 8
    rp = rp + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:34) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i > 5):
		rp = rp + 1
		print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:23) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)
rp = 0
for i in range(size(n)):
	if(i < 5):
		rp = rp + 1
	print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:34) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=float)

for i in range(size(n)):
	if(i < 5):
		vn[0] = vn[0] + 1
	elif(i < 5):
		vn[1] = vn[1] + 1
	elif(i < 5):
		vn[2] = vn[2] + 1
	elif(i < 5):
		vn[3] = vn[3] + 1
	elif(i < 5):
		vn[4] = vn[4] + 1
	print(vn)
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:26) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(i < 5):
		rp = rp + 1
	print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:42) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(i < 5):
		rp = rp + 1
		print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:23) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(n[i] < 5):
		rp = rp + 1
		print(rp)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:46) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(n[i] < 5):
		rp = rp + 1
print(rp)
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:54) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(n[i] < 5):
		rp = rp + 1
print(rp)

for i in range(size(n,0,-1)):
	vn = vn + 1
print(vn)
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:17) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(n[i] < 5):
		rp = rp + 1
print(rp)

for i in range(size(n,0,-1)):
	vn[i] = vn[i] + 1
print(vn)
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:36) 
-- CODE:
from numpy import*

n = array(eval(input("notas:")))
vn = zeros(size(n), dtype=int)
rp = 0
for i in range(size(n)):
	if(n[i] < 5):
		rp = rp + 1
print(rp)

for i in range(n,0,-1):
	vn[i] = vn[i] + 1
print(vn)
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
